fix(modal): scroll issue on body, search bar (#54, #55)
* fix(modal): disable scroll on body if modal is open

* refactor(search-bar): split test into different subject

* fix(search-bar): enable scroll in platform list

* chore(app): hide scrollbar

--- a/public/global.css
+++ b/public/global.css
@@ -10,6 +10,13 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', sans-serif;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
